corrected bug with title tag

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link href="css/index.css" type="text/css" rel="stylesheet"<title>FerrariPhotoApp</title>
+        <link href="css/index.css" type="text/css" rel="stylesheet">
+        <title>FerrariPhotoApp</title>
     </head>
     <body>
         <h1>FerrariPhotoApp</h1>
@@ -71,7 +72,7 @@
                         <legend>Your car story:</legend>
                         <textarea name="ferrari-comment" placeholder="Tell some about your car here..." rows="5" cols="30"></textarea>
                     </fieldset>
-                    <input type="submit" value="submit">
+                    <button value="submit">Submit</button>
                 </form>
             </section>
         </main>
